k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: prod
  labels:
    app: api
  annotations:
    cloud.google.com/backend-config: '{"default": "api-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
