k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "app-prod-api-ip"
    networking.gke.io/managed-certificates: "api-managed-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: API_DOMAIN   # replaced per environment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
